# MegPeak

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  android_build.sh
opencl-stub/: CMakeLists.txt  gen_impl.sh
opencl-stub/include/MCL/: cl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  cl_platform.h  opencl.h
opencl-stub/src/: libopencl-wrap.h  libopencl.cpp
src/: backend.h  main.cpp
src/cpu/: aarch64.cpp  aarch64.h  aarch64_dual_issue.h  armv7.cpp  armv7.h  backend.cpp  common.h  loongarch.h  loongarch_lasx.cpp  loongarch_utils.cpp  loongarch_utils.h  x86_avx.cpp  x86_sse.cpp  x86_utils.cpp  x86_utils.h
src/opencl/: backend.cpp  common.cpp  common.h
src/opencl/kernels/: compute_dp_kernels.h  compute_hp_kernels.h  compute_integer_kernels.h  compute_sp_kernels.h  global_bandwidth_kernels.h  local_memory_bandwidth.h
